fix scrollbars showing in production build

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@600&family=Bebas+Neue&display=swap');
 @import './styles/variables.scss';
 
+html {
+	width: 100%;
+	height: 100%;
+}
+
 body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
